# ros2_cpp

./: .gitignore
custom_interfaces/: CMakeLists.txt  package.xml
exp_ros2_py/: package.xml  setup.cfg  setup.py
exp_ros2_py/exp_ros2_py/: nodo_prueba.py  pub_mensaje.py  pub_msg_custom.py  srv_cliente.py  srv_servidor.py  sub_mensaje.py
experiments_ros2/: CMakeLists.txt  package.xml
experiments_ros2/src/: basic_publisher.cpp  basic_suscriber.cpp
experiments_ros2/src/services/: cliente_sumador_dos_numeros.cpp  servidor_suma_dos_numeros.cpp
experiments_ros2/src/services/examples/: cliente_reset_contador.cpp  servidor_reset_contador.cpp
experiments_ros2/src/topics/: basic_publisher.cpp
experiments_ros2/src/topics/examples/: cont_num.cpp  pub_msg_custom.cpp  pub_numero.cpp
ros2_experiments/: CMakeLists.txt  package.xml
