<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_experiments</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>exp_ros2_py</exec_depend>
  <exec_depend>experiments_ros2</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
